--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Olá, mundo!</title>
   </head>
   <body>
-    <h1>Olá, mundo!</h1>
+    <h1>Os Brinquedos Mais Radicais do Mundo</h1>
     <div class="media">
         <img class="mr-3" src=".../64x64" alt="Imagem de exemplo genérica">
         <div class="media-body">
