--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <title>Olá, mundo!</title>
+    <title>Os Brinquedos Mais Radicais do Mundo</title>
   </head>
   <body>
-    <h1>Os Brinquedos Mais Radicais do Mundo</h1>
+    <h1>Talocan</h1>
     <div class="media">
-        <img class="mr-3" src=".../64x64" alt="Imagem de exemplo genérica">
+        <img class="mr-3" src="download.jpeg" alt="Imagem de exemplo genérica">
         <div class="media-body">
           <h5 class="mt-0">Cabeçalho da mídia</h5>
           Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
