--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <img class="mr-3" src="download.jpeg" alt="Imagem de exemplo genérica">
         <div class="media-body">
           <h5 class="mt-0">Cabeçalho da mídia</h5>
-          Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+          O interessante é que para diferenciar de outros elevadores, ela funciona no escuro. Um outro brinquedo bastante procurado no parque é o Talocan.
       <h1>Tourbillon</h1>
           <div class="media mt-3">
             <a class="pr-3" href="#">
-              <img src="download (1).jpeg" alt="Imagem de exemplo genérica">
+              <img src="download (1).jpeg" alt="Tourbillon"
             </a>
             <div class="media-body">
               <h5 class="mt-0">Tourbillon</h5>
