--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
         <div class="media-body">
           <h5 class="mt-0">Cabeçalho da mídia</h5>
           O interessante é que para diferenciar de outros elevadores, ela funciona no escuro. Um outro brinquedo bastante procurado no parque é o Talocan.
-      <h1>Tourbillon</h1>
+      <h1>Insanity</h1>
           <div class="media mt-3">
             <a class="pr-3" href="#">
               <img src="download (1).jpeg" alt="Tourbillon"
             </a>
             <div class="media-body">
               <h5 class="mt-0">Tourbillon</h5>
-             
+              <figure class="figure">
+                <img src="download (3).jpeg" class="figure-img img-fluid rounded" alt="Imagem de um quadrado genérico com bordas arredondadas, em uma figure.">
+                <figcaption class="figure-caption">A Steel Dragon é incrível: ela é a sexta montanha-russa mais rápida do mundo, e tem mais de 2 km de diversão de comprimento, chegando a um total de 4 minutos de passeio!</figcaption>
+              </figure>
             </div>
           </div>
         </div>
